--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,13 +1,7 @@
-<<<<<<< HEAD
-/Controler/
-/VuePageExo/
-/Vuecours/
-/anglais/
-/ControlerVersPageExo/
-/Vue/
 /ControlerVersCours/
-=======
-/VuePageExo/
 /Vuecours/
 /Vue/
->>>>>>> d01cc8bb251d281f7e767ae1f01f3df74b924dec
+/anglais/
+/ControlerVersCoursVoc/
+/ControlerVersPageExo/
+/VuePageExo/
